fix print problem with cutting off columns of the table

--- a/css/main.css
+++ b/css/main.css
@@ -8412,6 +8412,10 @@ tbody > tr:nth-child(2n+1) > td {
   .content_wrapper {
     display: none;
   }
+  th,
+  td {
+    padding: .25em;
+  }
 }
 .intro-message {
   padding: 1em;
