--- a/css/main.ie.css
+++ b/css/main.ie.css
@@ -8837,6 +8837,11 @@ tbody > tr:nth-child(2n+1) > td {
   .content_wrapper {
     display: none;
   }
+
+  th,
+  td {
+    padding: .25em;
+  }
 }
 
 .intro-message {
