--- a/src/static/css/print.css
+++ b/src/static/css/print.css
@@ -3,4 +3,7 @@
 	.wrapper, .footer, .downloads {
 		display: none;
 	}
+	th, td {
+		padding: .25em;
+	}
 }
